fix scrollbar offset

--- a/src/assets/styles/globalStyles.less
+++ b/src/assets/styles/globalStyles.less
@@ -17,7 +17,7 @@ body {
 
 html,
 body {
-  width: 100vw;
+  width: 100%;
 }
 
 .content {
