--- a/src/components/Footer/Footer.module.less
+++ b/src/components/Footer/Footer.module.less
@@ -2,6 +2,7 @@
 
 .footer {
   background: @darkGrey;
+  width: 100%;
 
   .footerContent {
     max-width: @maxcontentwidth;
@@ -11,8 +12,6 @@
     font-family: "Roboto";
   }
   padding: 50px 20px;
-
-  width: 100vw;
 }
 
 .column {
