--- a/src/components/Header/Header.module.less
+++ b/src/components/Header/Header.module.less
@@ -4,7 +4,7 @@
 
 .header {
   height: @headerHeight;
-  width: 100vw;
+  width: 100%;
   background: @red;
 
   .content {
