--- a/src/components/Search/Search.module.less
+++ b/src/components/Search/Search.module.less
@@ -45,7 +45,7 @@
 .xMark {
   top: 15px;
   right: 15px;
-  position: absolute;
+  position: fixed;
   width: 20px;
   fill: white;
 }
