--- a/src/components/home-components/description/Description.module.less
+++ b/src/components/home-components/description/Description.module.less
@@ -2,7 +2,7 @@
 
 .description {
   font-family: "Roboto";
-
+  padding: 0 20px;
   margin-top: 100px;
   margin-bottom: 50px;
   h2 {
